Fix album art in queue
- inadvertently cropped the album art in the queue list
- added a drop shadow to the album art in the queue list

--- a/YouTubeMusic-Light.user.css
+++ b/YouTubeMusic-Light.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           YouTube Music - Light Style
 @namespace   Devo7v
-@version     0.1.14
+@version     0.1.15
 @homepageURL https://github.com/Devo7v/UserCSS
 @supportURL  https://github.com/Devo7v/UserCSS/issues
 @updateURL   https://raw.githubusercontent.com/Devo7v/UserCSS/master/YouTubeMusic-Light.user.css
@@ -295,13 +295,14 @@ yt-formatted-string.byline > a, /*Artist & Album in the player bar*/
 img.yt-img-shadow, #player.ytmusic-player-page, /*Album art on the now playing page*/
 .yt-simple-endpoint.image-wrapper, ytmusic-two-row-item-renderer .image.ytmusic-two-row-item-renderer, /*Album art/videos on the Home page. If you're going to add a shadow to these, then you'll also want to set the border-radius to 0% in the next rule.*/
 /*.left-items.ytmusic-responsive-list-item-renderer, /*Small thumbnails on the Home page*/
+.left-items.ytmusic-player-queue-item, /*Thumbnail in the queue*/
 .image.ytmusic-player-bar, /*Thumbnail in the player bar*/
 ytmusic-thumbnail-renderer[thumbnail-crop_="MUSIC_THUMBNAIL_CROP_CIRCLE"], ytmusic-thumbnail-renderer[thumbnail-crop_="MUSIC_THUMBNAIL_CROP_CIRCLE"] .image.ytmusic-thumbnail-renderer /*Artist/Alum pictures when viewing the artist or album list in the UPLOADED library view*/
 {
     box-shadow: 0 0 3px 0px rgba(0,0,0,1) !important;
     border-radius: 0% !important; /*50% creates circles, 0% creates squares*/
 }
-yt-img-shadow[object-fit="CONTAIN"] img.yt-img-shadow {
+/*yt-img-shadow[object-fit="CONTAIN"] img.yt-img-shadow {
     object-fit: none !important;
 }
 
